force-app/main/default/objects/SCOC__EmploymentList__c/SCOC__EmploymentList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Employment List</description>
    <label>Employment</label>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Employment List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>