force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__Amount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount__c</fullName>
    <description>Amount</description>
    <label>Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>