force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__DateVerifiedOrReported__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateVerifiedOrReported__c</fullName>
    <description>Date Verified or Reported</description>
    <label>Date Verified or Reported</label>
    <type>Date</type>
</CustomField>