force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__EmployerName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EmployerName__c</fullName>
    <description>Employer Name</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>