force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__IsLastReportedEmployment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__IsLastReportedEmployment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional boolean field to indicate if the Employer from the vendor response is the last reported employment. By default, it is null.</description>
    <inlineHelpText>Is Last Reported Employment</inlineHelpText>
    <label>Is Last Reported Employment</label>
    <type>Checkbox</type>
</CustomField>