force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastUpdated__c</fullName>
    <description>Date that the employer was last updated.</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>