force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__Occupation__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Occupation__c</fullName>
    <description>Occupation</description>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>