force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__OriginationCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OriginationCode__c</fullName>
    <description>Origination Code</description>
    <label>Origination Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>