force-app/main/default/objects/SCOC__EmploymentList__c/fields/SCOC__OtherIncome__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OtherIncome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other Income</description>
    <inlineHelpText>Other Income</inlineHelpText>
    <label>Other Income</label>
    <type>Checkbox</type>
</CustomField>